Archive2/48/2e351da1a84a28/output
main.cpp:17:3: error: field has incomplete type 'X'
X x;
  ^
main.cpp:15:8: note: definition of 'X' is not complete until the closing '}'
struct X : S { ~X() { std::cout << "X destructed; " << std::endl;}
       ^
main.cpp:20:3: error: expected '}'
{}
  ^
main.cpp:15:14: note: to match this '{'
struct X : S { ~X() { std::cout << "X destructed; " << std::endl;}
             ^
main.cpp:20:3: error: expected ';' after struct
{}
  ^
  ;
3 errors generated.
